vod-ms-customerInfo/target/classes/META-INF/fabric8/openshift/vod-ms-customerinfo-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    kubernetes.io/change-cause: 1.0.0-SNAPSHOT
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=vod-ms-customerInfo&var-version=1.0.0-SNAPSHOT
    fabric8.io/scm-tag: HEAD
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/vod-ms-starter/vod-ms-customerInfo
  labels:
    project: vod-ms-customerInfo
    hystrix.enabled: "true"
    hystrix.cluster: default
    version: 1.0.0-SNAPSHOT
    team: Cloud_Self_Service
    app: vod-ms-customerInfo
    provider: fabric8
    group: za.co.vodacom.ms.customerInfo
  name: vod-ms-customerinfo
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: vod-ms-customerInfo
    provider: fabric8
    group: za.co.vodacom.ms.customerInfo
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/iconUrl: img/icons/spring-boot.svg
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=vod-ms-customerInfo&var-version=1.0.0-SNAPSHOT
        fabric8.io/scm-tag: HEAD
        kubernetes.io/change-cause: 1.0.0-SNAPSHOT
        fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/vod-ms-starter/vod-ms-customerInfo
      labels:
        project: vod-ms-customerInfo
        hystrix.enabled: "true"
        hystrix.cluster: default
        version: 1.0.0-SNAPSHOT
        app: vod-ms-customerInfo
        provider: fabric8
        group: za.co.vodacom.ms.customerInfo
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: devcluster
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: vod-docker-ms.artifactory.vodacom.co.za/vod-ms-customerInfo:1.0.0-SNAPSHOT
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /manage/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 185
          periodSeconds: 20
          timeoutSeconds: 2
        name: spring-boot
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /manage/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 20
          timeoutSeconds: 2
        securityContext:
          privileged: false
        volumeMounts:
        - mountPath: /var/log
          name: varlog
      - args:
        - /bin/sh
        - -c
        - while test ! -f "/var/log/spring.log"; do echo "Waiting for logfile " ;
          sleep 1; done; tail -n+1 -F /var/log/spring.log ;
        image: busybox
        name: spring-log
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 50m
            memory: 10Mi
        volumeMounts:
        - mountPath: /var/log
          name: varlog
      volumes:
      - emptyDir: {}
        name: varlog
  triggers:
  - type: ConfigChange
