vod-ms-customerInfo/target/classes/META-INF/fabric8/openshift/vod-ms-customerinfo-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /manage/prometheus
    za.co.vodacom/hystrix.clusters: vod-ms-customerInfo,Cloud_Self_Service
    fabric8.io/iconUrl: img/icons/spring-boot.svg
    prometheus.io/scrape: "true"
    fabric8.io/scm-tag: HEAD
    prometheus.io/port: "8080"
    fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/vod-ms-starter/vod-ms-customerInfo
  labels:
    team: Cloud_Self_Service
    project: vod-ms-customerInfo
    hystrix.enabled: "true"
    hystrix.cluster: default
    version: 1.0.0-SNAPSHOT
    expose: "true"
    app: vod-ms-customerInfo
    provider: fabric8
    group: za.co.vodacom.ms.customerInfo
  name: vod-ms-customerinfo
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vod-ms-customerInfo
    provider: fabric8
    group: za.co.vodacom.ms.customerInfo
  type: ClusterIP
