vod-ms-customerInfo/target/classes/META-INF/fabric8/openshift/vod-ms-customerinfo-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    team: Cloud_Self_Service
    project: vod-ms-customerInfo
    hystrix.enabled: "true"
    hystrix.cluster: default
    version: 1.0.0-SNAPSHOT
    expose: "true"
    app: vod-ms-customerInfo
    provider: fabric8
    group: za.co.vodacom.ms.customerInfo
  name: vod-ms-customerinfo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: vod-ms-customerinfo
